applications/openeuler-ccs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/api-certification/(.*) /ccs/base/$1 ;
  name: openeuler-ccs-ingress
spec:
  tls:
    - hosts:
        - ccs.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: ccs.openeuler.org
      http:
        paths:
          - backend:
              serviceName: openeuler-ccs-gateway-service
              servicePort: 80
            path: /
